<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.npipf.tgh.time2learn.Game">

    <nl.npipf.tgh.time2learn.MyAnalogClock
        android:layout_width="@dimen/clock_dimens"
        android:layout_height="@dimen/clock_dimens"
        android:id="@+id/clockGame"
        android:layout_below="@+id/textCurScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/clock_margin"
        android:layout_marginRight="@dimen/grid_margin" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockGame"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout"
        android:layout_marginRight="@dimen/grid_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/answer"
            android:id="@+id/textAnswer"
            android:layout_row="0"
            android:layout_column="0" />

        <Spinner
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerRepString"
            android:layout_row="0"
            android:layout_column="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerNumber"
            android:layout_row="0"
            android:layout_column="2"
            android:spinnerMode="dropdown" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button"
        android:id="@+id/butCheckAnswer"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_score"
        android:id="@+id/textCurScore"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
