<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.npipf.tgh.time2learn.Game5min">

    <nl.npipf.tgh.time2learn.MyAnalogClock
        android:layout_width="@dimen/clock_dimens"
        android:layout_height="@dimen/clock_dimens"
        android:id="@+id/clock5minGame"
        android:layout_below="@+id/textGottenScore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer"
        android:id="@+id/textAnswer2"
        android:layout_below="@+id/clock5minGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textAnswer2"
        android:id="@+id/gridLayout">

        <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/spinner5min"
            android:layout_row="0"
            android:layout_column="0"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerQuarters"
            android:layout_row="0"
            android:layout_column="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerNumbers"
            android:layout_row="0"
            android:layout_column="2"
            android:spinnerMode="dropdown" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button"
        android:id="@+id/butCheckAnswer5min"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_score"
        android:id="@+id/textGottenScore"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
